  * LockScreenController: ignore icon_paths_changed signal in
    menumanager for Lockscreen (LP: #1635625)

  [ Andrea Azzarone ]
  * Properly handle the file manager copy dialog in
    FileManagerLauncherIcon and in StorageLauncherIcon. (LP: #1575452,
    LP: #1609845)
  * Correctly position the force quit dialog when scaling is different
    than 1.0 (LP: #1637991)

 -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Fri, 11 Nov 2016 14:45:03 +0100

unity (7.5.0+16.10.20160906.1-0ubuntu1) yakkety; urgency=medium

  [ Marco Trevisan (Treviño), Ted Gould ]
  * Unity: add systemd units for the shell and related services, mark
    unity7 a requirement for ubuntu-session

 -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Tue, 06 Sep 2016 14:19:15 +0000

unity (7.5.0+16.10.20160901.2-0ubuntu1) yakkety; urgency=medium

  [ Andrea Azzarone ]
  * Disable menu discovery animation if MenusDiscoveryDuration is 0.
    (LP: #942962)
  * Redraw fake decorations on window resize. (LP: #940470)

  [ Marco Trevisan (Treviño) ]
  * InputMonitor: add an unity class that monitors XInput2 events and
    converts them to XEvent
  * EdgeBarrierController: use InputMonitor to get the barrier events
    instead of relying on its implementation
  * DecorationsMenuLayout: use input monitor for menu scrubbing (LP:
    #1614597)
  * PanelView: use InputMonitor to track menu events
  * LockScreenPanel: use InputMonitor events instead of mouse polling
    for menu scrubbing
  * MenuManager: add support for mouse trackers with triangle algorithm
    support (LP: #1618405)
  * PanelView: scale gradient refinement properly
  * PanelService: don't allow to deactivate menus if they've been opened
    too shortly
  * WindowButton: properly partially unmaximize a window when
    middle/left clicking in the restore button (LP: #1616136)
  * CMake: move data and setting files in proper folder, define shared
    libdir variables

 -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Thu, 01 Sep 2016 23:59:15 +0000
