@@ -10,6 +10,8 @@ unity (7.5.0+16.10.20160906.1-0ubuntu2) UNRELEASED; urgency=medium
     LP: #1609845)
   * Correctly position the force quit dialog when scaling is different
     than 1.0 (LP: #1637991)
+  * GnomeSession: Retrieve the session id using dbus if $XDG_SESSION_ID
+    is not set (LP: #1633749)
 
  -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Fri, 11 Nov 2016 14:45:03 +0100
 
